--- a/src/components/socials/Socials.scss
+++ b/src/components/socials/Socials.scss
@@ -55,7 +55,6 @@
 		top: -30px;
 		left: 50%;
 		transform: translateX(-35%) rotate(0deg);
-		letter-spacing: 3px;
 		opacity: 0;
 		transition: all 0.4s ease;
 		white-space: nowrap;
